# otpo

./: .gitignore  LICENSE  MPI_IO_PARAMS  Makefile.am  OpenIB_Parameters  OpenIB_Parameters.txt  OtpoParser.c  README  RELEASE  VERSION  acinclude.m4  adcl_setup.c  autogen.sh  configure.ac  exeTime.h  generate_input_file.c  otpo.c  otpo.h  output.c  parse.c
ADCL/: INSTALL.sx8  LICENSE  Makefile  Makefile.defs  Makefile.defs.in  Makefile.in  TODO  config.guess  config.status  configure  configure.in
ADCL/autom4te.cache/: output.0  requests  traces.0
ADCL/config/: config.adcl  config.adcl.Allgatherv_bruck  config.adcl.Allgatherv_linear  config.adcl.Allgatherv_native  config.adcl.Allgatherv_neighbor_exchange  config.adcl.Allgatherv_recursive_doubling  config.adcl.Allgatherv_ring  config.adcl.Allreduce_linear  config.adcl.Allreduce_native  config.adcl.Allreduce_nonoverlapping  config.adcl.Allreduce_recursive_doubling  config.adcl.Allreduce_ring  config.adcl.Alltoall_bruck_SR  config.adcl.Alltoall_ladd_block2  config.adcl.Alltoall_ladd_block4  config.adcl.Alltoall_ladd_block8  config.adcl.Alltoall_linear_SR  config.adcl.Alltoall_linear_sync_SR  config.adcl.Alltoall_native_SR  config.adcl.Alltoall_pair_SR  config.adcl.Alltoall_pair_excl_SR  config.adcl.IsIr_aao  config.adcl.IsIr_aao_pack  config.adcl.IsIr_pair  config.adcl.IsIr_pair_pack  config.adcl.PostStartGet_aao  config.adcl.PostStartGet_pair  config.adcl.PostStartPut_aao  config.adcl.PostStartPut_pair  config.adcl.SIr_aao  config.adcl.SIr_aao_pack  config.adcl.SIr_pair  config.adcl.SIr_pair_pack  config.adcl.SR_pair  config.adcl.SR_pair_pack  config.adcl.S_R_pair  config.adcl.S_R_pair_pack  config.adcl.Sr_pair  config.adcl.Sr_pair_pack  config.adcl.WinFenceGet_aao  (+5 more)
ADCL/doc/: adcl-spec.bib  adcl-spec.tex  attribute.tex  environment.tex  function.tex  headerfooter.sty  introduction.tex  lineno.sty  request.tex  title.tex  tm.sty  topology.tex  vector.tex
ADCL/include/: ADCL.h  ADCL.inc  ADCL_allgatherv.h  ADCL_allreduce.h  ADCL_alltoall.h  ADCL_alltoallv.h  ADCL_array.h  ADCL_attribute.h  ADCL_bcast.h  ADCL_change.h  ADCL_config.h  ADCL_config.h.in  ADCL_contiguous.h  ADCL_data.h  ADCL_display.h  ADCL_dummy_mpi.h  ADCL_emethod.h  ADCL_fprototypes.h  ADCL_function.h  ADCL_hist.h  ADCL_internal.h  ADCL_list.h  ADCL_memory.h  ADCL_packunpack.h  ADCL_papi.h  ADCL_predefined.h  ADCL_reduce.h  ADCL_reduce_topo.h  ADCL_request.h  ADCL_statistics.h  ADCL_subarray.h  ADCL_sysconfig.h  ADCL_sysconfig.h.in  ADCL_topology.h  ADCL_vector.h  ADCL_vmap.h
ADCL/src/communication/: ADCL_allgatherv_bruck.c  ADCL_allgatherv_linear.c  ADCL_allgatherv_native.c  ADCL_allgatherv_neighborexchange.c  ADCL_allgatherv_recursivedoubling.c  ADCL_allgatherv_ring.c  ADCL_allgatherv_two_procs.c  ADCL_allreduce_linear.c  ADCL_allreduce_native.c  ADCL_allreduce_nonoverlapping.c  ADCL_allreduce_recursivedoubling.c  ADCL_allreduce_ring.c  ADCL_alltoall_bruck.c  ADCL_alltoall_ladd.c  ADCL_alltoall_linear.c  ADCL_alltoall_linear_sync.c  ADCL_alltoall_native.c  ADCL_alltoall_pairwise.c  ADCL_alltoall_pairwise_excl.c  ADCL_alltoallv_linear.c  ADCL_alltoallv_native.c  ADCL_alltoallv_pairwise.c  ADCL_bcast_linear.c  ADCL_change_sb_aao.c  ADCL_change_sb_pair.c  ADCL_reduce_binary.c  ADCL_reduce_binomial.c  ADCL_reduce_chain.c  ADCL_reduce_generic.c  ADCL_reduce_in_order_binary.c  ADCL_reduce_linear.c  ADCL_reduce_native.c  ADCL_reduce_pipeline.c  ADCL_reduce_topo.c  Makefile
ADCL/src/dummympi/: ADCL_mpi.c  Makefile
ADCL/src/framework/: ADCL_array.c  ADCL_attribute.c  ADCL_contigous.c  ADCL_data.c  ADCL_display.c  ADCL_emethod.c  ADCL_function.c  ADCL_hist.c  ADCL_hypothesis.c  ADCL_indexed.c  ADCL_list.c  ADCL_packunpack.c  ADCL_papi.c  ADCL_predefined.c  ADCL_predefined_alltoall.c  ADCL_predefined_alltoallv.c  ADCL_predefined_reduce.c  ADCL_printf.c  ADCL_readenv.c  ADCL_reduce.c  ADCL_request.c  ADCL_statistics.c  ADCL_subarray.c  ADCL_topology.c  ADCL_twok.c  ADCL_vector.c  ADCL_vmap.c  Makefile  Makefile.in
ADCL/src/memory/: ADCL_memory.c  ADCL_memory_backend.c  Makefile
ADCL/src/mpi/: Type_create_subarray.c
ADCL/test/: Makefile  PbSizes_1D.c  PbSizes_2D.c  PbSizes_3D.c  adcl_f.f90  attrs_1.c  attrs_2.c  attrs_3.c  attrs_3a.c  attrs_4.c  aux-data-1D.c  aux-data-1D_f.f90  aux-data-2D-f.f90  aux-data-2D.c  aux-data-3D.c  aux-data-3D_f.f90  aux-data-4D.c  aux-data-4D_f.f90  data_1.c  first.c  first_f.f90  fourth.c  one-dim-f.f90  one-dim.c  second.c  second_f.f90  test-fnctset-allgatherv-1d.c  test-fnctset-allgatherv_f.f90  test-fnctset-allreduce.c  test-fnctset-allreduce_f.f90  test-fnctset-alltoall.c  test-fnctset-alltoall_f.f90  test-fnctset-alltoallv-1d.c  test-fnctset-extneigh-2d.c  test-fnctset-extneigh-2d_f.f90  test-fnctset-extneigh-3d.c  test-fnctset-extneigh-3d_f.f90  test-fnctset-noattrs.c  test-fnctset-noattrs_f.f90  test-fnctset-reduce.c  (+11 more)
ADCL/test/ATF/: ATF.h  ATF_Adcl_global.h  ATF_Change_Init.c  ATF_Change_fcfs.c  ATF_Display_Result.h  ATF_Display_result.c  ATF_Free_matrix.c  ATF_Get.c  ATF_Init.c  ATF_Init_matrix.c  ATF_Main.c  ATF_Matmul.c  ATF_Matmul.h  ATF_Memory.c  ATF_Memory.h  ATF_Precon.c  ATF_Read_config.c  ATF_Set.bsp2.c  ATF_Set_Datatypes.c  ATF_Solver.c  ATF_Solver_tfqmr.c  ATF_tfqmr.Cal.c  ATF_tfqmr.Cal.h  Makefile  System.config
ADCL/test/matmul/: Makefile  Values.conf  matmul_userfuncs.f90
ADCL/test/parheat/: Makefile  check_done.c  get_datatypes.c  get_domain.c  get_offset.c  int_sort.c  parheat.c  parheat.h  read_input.c  set_initial.c  update_solution.c
ADCL/test/pcg/: Makefile  README  distmat.h  dmio.c  dmiodlst.c  dmiodlst.h  dmiolst.c  dmiolst.h  errhand.h  iohb.c  main.c  matvect.c  mpitimer.c  mpitimer.h  vector.c
ADCL/test/solversys/: Makefile  Makefile.in  System.config  System_Init.f90  (+16 more)
ADCL/utils/: ADCL.xsl  Makefile  Makefile.in  attr_test_generator.c  cluster.c  cluster_data.c  data.h  eval-slurm.c  genscript.c  gentex.c  iterations.c  merge.c  minmax.c  minmax.h  minmax_generic.c  minmax_generic.h  minmax_generic_early_stopping.c  minmax_generic_parse_file.c  mkdir.sh  read-slurm.c  robust.c  split.c
(+126 files in other folders)
