#
# Copyright (c) 2006-2007      University of Houston. All rights reserved.
# Copyright (c) 2007           Cisco, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_PREREQ(2.53)
AC_CONFIG_HEADER(include/ADCL_config.h)
dnl First step for the cross compiling ...
AC_CANONICAL_TARGET
AC_PREFIX_DEFAULT(${HOME}/ADCL)

dnl 
dnl The idea behind that it's to have a way to load architecture specific
dnl files, to be able to compile for all architectures with the same
dnl sources. In same time it could be usefull to have specific flags
dnl and compilers settings for all of them.
dnl 

AC_PROG_CC
AC_PROG_CXX
AC_PROG_F77
#AC_F77_LIBRARY_LDFLAGS

dnl Check whether make sets the variable MAKE
#AC_PROG_MAKE_SET

dnl Check whether system supports "ln -s" and set env-var LN_S
#AC_PROG_LN_S

AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(F77)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(FFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(FLDFLAGS)
AC_SUBST(AR)

AC_CHECK_PROG(AR, ar, ar)

dnl ==================================================
dnl Now ask the user 'bout desired options...

dnl ==================================================
AC_MSG_CHECKING(for ADCL main directory)
AC_ARG_WITH(adcl_dir,
 [  --with-adcl-dir=dir               Main ADCL directory (default=$PWD)],
    adcl_dir="${withval}", adcl_dir="")
    if test "x$adcl_dir" = "x" ; then 
       adcl_dir=$PWD
    fi
    AC_MSG_RESULT(${adcl_dir})
    AC_SUBST(adcl_dir)
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for ADCL include directory)
AC_ARG_WITH(adcl_inc_dir,
 [  --with-adcl-inc-dir=dir           ADCL include directory (default=ADCL_DIR/include)],
    adcl_inc_dir="${withval}", adcl_inc_dir="")
    if test "x$adcl_inc_dir" = "x" ; then 
       adcl_inc_dir=${adcl_dir}/include
    fi
    AC_MSG_RESULT(${adcl_inc_dir})
    AC_SUBST(adcl_inc_dir)
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for ADCL lib directory)
AC_ARG_WITH(adcl_lib_dir,
 [  --with-adcl-lib-dir=dir           ADCL lib directory (default=ADCL_DIR/lib)],
    adcl_lib_dir="${withval}", adcl_lib_dir="")
    if test "x$adcl_lib_dir" = "x" ; then 
       adcl_lib_dir=${adcl_dir}/lib
    fi
    AC_MSG_RESULT(${adcl_lib_dir})
    AC_SUBST(adcl_lib_dir)
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for ADCL binary directory)
AC_ARG_WITH(adcl_bin_dir,
 [  --with-adcl-bin-dir=dir           ADCL bin directory (default=ADCL_DIR/bin)],
    adcl_bin_dir="${withval}", adcl_bin_dir="")
    if test "x$adcl_bin_dir" = "x" ; then 
       adcl_bin_dir=${adcl_dir}/bin
    fi
    AC_MSG_RESULT(${adcl_bin_dir})
    AC_SUBST(adcl_bin_dir)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for name of the ADCL library)
AC_ARG_WITH(adcl_lib_name,
 [  --with-adcl-lib-name=name         Name of the ADCL library (default=libadcl.a)],
    adcl_lib_name="${withval}", adcl_lib_name="")
    if test "x$adcl_lib_name" = "x" ; then 
       adcl_lib_name=libadcl.a
    fi
    AC_MSG_RESULT(${adcl_lib_name})
    AC_SUBST(adcl_lib_name)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for timer options)
AC_ARG_WITH(adcl-timer,
 [  --with-adcl-timer=timer           Timer options (default=TIMER_GETTIMEOFDAY)],
    timer="${withval}", timer="")
    if test "x$timer" = "x" ; then
      timer=TIMER_GETTIMEOFDAY
    fi
    if test "$timer" == "TIMER_GETTIMEOFDAY"; then 
      AC_MSG_RESULT(${timer})
    else if test "$timer" == "TIMER_MPI_WTIME"; then 
      AC_MSG_RESULT(${timer})
    else if test "$timer" == "TIMER_PAPI_REAL_USEC"; then 
      AC_MSG_RESULT(${timer})
    else
      AC_MSG_ERROR([not recognized timer])
    fi
    fi
    fi
    AC_DEFINE_UNQUOTED([TIMER],$timer,[])
dnl ==================================================

dnl ==================================================
AC_MSG_CHECKING(for MPI install directory)
AC_ARG_WITH(mpi_dir,
 [  --with-mpi-dir=dir                Installation directory of MPI],
    mpi_dir="${withval}", mpi_dir="/usr/local/mpi/")
    AC_MSG_RESULT(${mpi_dir})
    AC_SUBST(mpi_dir)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for MPI include directory)
AC_ARG_WITH(mpi_inc_dir,
 [  --with-mpi-inc-dir=dir            Include directory of MPI (default=MPI_DIR/include)],
    mpi_inc_dir="${withval}", mpi_inc_dir="")
    if test "x$mpi_inc_dir" = "x" ; then
      mpi_inc_dir=${mpi_dir}/include
    fi
    AC_MSG_RESULT(${mpi_inc_dir})
    AC_SUBST(mpi_inc_dir)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for MPI lib directory)
AC_ARG_WITH(mpi_lib_dir,
 [  --with-mpi-lib-dir=dir            Library directory of MPI (default=MPI_DIR/lib)],
    mpi_lib_dir="${withval}", mpi_lib_dir="")
    if test "x$mpi_lib_dir" = "x" ; then
      mpi_lib_dir=${mpi_dir}/lib
    fi
    AC_MSG_RESULT(${mpi_lib_dir})
    AC_SUBST(mpi_lib_dir)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for MPI binary directory)
AC_ARG_WITH(mpi_bin_dir,
 [  --with-mpi-bin-dir=dir            Bin directory of MPI (default=MPI_DIR/bin) ],
    mpi_bin_dir="${withval}", mpi_bin_dir="")
    if test "x$mpi_bin_dir" = "x" ; then
      mpi_bin_dir=${mpi_dir}/bin
    fi
    AC_MSG_RESULT(${mpi_bin_dir})
    AC_SUBST(mpi_bin_dir)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for MPI C compiler wrapper)
AC_ARG_WITH(mpi_cc,
 [  --with-mpi-cc=mpicc               MPI C compiler wrapper (default=mpicc) ],
    mpi_cc="${withval}" && c_compiler="${mpi_bin_dir}/${mpi_cc}", 
    mpi_cc="mpicc" && c_compiler="${mpi_bin_dir}/${mpi_cc}")
    AC_MSG_RESULT(${mpi_cc})
    AC_SUBST(mpi_cc)
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for MPI Fortran 90 compiler wrapper)
AC_ARG_WITH(mpi_f90,
 [  --with-mpi-f90=mpif90             MPI f90 compiler wrapper (default=mpif90) ],
    mpi_f90="${withval}" && f_compiler="${mpi_bin_dir}/${mpi_f90}", 
    mpi_f90="mpif90" && f_compiler="${mpi_bin_dir}/${mpi_f90}")
    AC_MSG_RESULT(${mpi_f90})
    AC_SUBST(mpi_f90)
dnl ==================================================	

dnl ==================================================
AC_ARG_ENABLE(papi,
[  --enable-papi                     enable the usage of papi (default=no)],
[test "$enableval" = yes && ADCL_PAPI=yes])
test "$ADCL_PAPI" = yes || ADCL_PAPI=no

AC_MSG_CHECKING([whether to enable the usage of papi])
AC_MSG_RESULT(${ADCL_PAPI})

if test "$ADCL_PAPI" = "yes" ; then 
   AC_DEFINE(ADCL_PAPI)

dnl ==================================================
  AC_MSG_CHECKING(for PAPI main directory)
  AC_ARG_WITH(papi_dir,
  [  --with-papi-dir=dir               Main PAPI directory (default=$PWD)],
    papi_dir="${withval}", papi_dir="")
    if test "x$papi_dir" = "x" ; then 
       papi_dir=$PWD
       adcl_papi_o=""
       adcl_Papi_o=""
    else
       adcl_papi_o="ADCL_papi.o"
       adcl_Papi_o="ADCL_Papi.o"	       
    fi
    AC_MSG_RESULT(${papi_dir})
  dnl ==================================================	
  dnl ==================================================
AC_MSG_CHECKING(for PAPI include directory)
AC_ARG_WITH(papi_inc_dir,
 [  --with-papi-inc-dir=dir           PAPI include directory (default=PAPI_DIR/include)],
    papi_inc_dir="${withval}", papi_inc_dir="")
    if test "x$papi_inc_dir" = "x" ; then 
       papi_inc_dir=${papi_dir}/include
    fi
    AC_MSG_RESULT(${papi_inc_dir})
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for PAPI lib directory)
AC_ARG_WITH(papi_lib_dir,
 [  --with-papi-lib-dir=dir           PAPI lib directory (default=PAPI_DIR/lib)],
    papi_lib_dir="${withval}", papi_lib_dir="")
    if test "x$papi_lib_dir" = "x" ; then 
       papi_lib_dir=${papi_dir}/lib
    fi
    AC_MSG_RESULT(${papi_lib_dir})
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for PAPI binary directory)
AC_ARG_WITH(papi_bin_dir,
 [  --with-papi-bin-dir=dir           PAPI bin directory (default=PAPI_DIR/bin)],
    papi_bin_dir="${withval}", papi_bin_dir="")
    if test "x$papi_bin_dir" = "x" ; then 
       papi_bin_dir=${papi_dir}/bin
    fi
    AC_MSG_RESULT(${papi_bin_dir})
dnl ==================================================	

dnl ==================================================
AC_MSG_CHECKING(for name of the PAPI library)
AC_ARG_WITH(papi_lib_name,
 [  --with-papi-lib-name=name         Name of the PAPI library (default=papi)],
    papi_lib_name="${withval}", papi_lib_name="")
    if test "x$papi_lib_name" = "x" ; then 
       papi_lib_name="papi"
    fi
    AC_MSG_RESULT(${papi_lib_name})
dnl ==================================================	

   adcl_papi_inc_flag="-I${papi_inc_dir}"
   adcl_papi_ld_flag="-L${papi_lib_dir} -l${papi_lib_name}"

fi

AC_SUBST(adcl_papi_inc_flag)
AC_SUBST(adcl_papi_ld_flag)
AC_SUBST(adcl_papi_o)
AC_SUBST(adcl_Papi_o)


dnl ==================================================
dnl ==================================================
dnl ==================================================
dnl Check for GSL - experimental -

AC_ARG_ENABLE(gsl,
[  --enable-gsl                      enable the usage of gsl (default=no)],
[test "$enableval" = yes && ADCL_GSL=yes])
test "$ADCL_GSL" = yes || ADCL_GSL=no

AC_MSG_CHECKING([whether to enable the usage of GSL])
AC_MSG_RESULT(${ADCL_GSL})

if test "$ADCL_GSL" = "yes" ; then 
   AC_DEFINE(ADCL_GSL)

AC_MSG_CHECKING(for GSL main directory)
  AC_ARG_WITH(gsl_dir,
  [  --with-gsl-dir=dir                Main GSL directory (default=/usr/local)],
    gsl_dir="${withval}", gsl_dir="")
    if test "x$gsl_dir" = "x" ; then 
       gsl_dir="/usr/local"
    fi
    AC_MSG_RESULT(${gsl_dir})
  dnl ==================================================	
  dnl ==================================================
AC_MSG_CHECKING(for GSL include directory)
AC_ARG_WITH(gsl_inc_dir,
 [  --with-gsl-inc-dir=dir            GSL include directory (default=GSL_DIR/include/gsl)],
    gsl_inc_dir="${withval}", papi_inc_dir="")
    if test "x$gsl_inc_dir" = "x" ; then 
       gsl_inc_dir=${gsl_dir}/include/gsl
    fi
    AC_MSG_RESULT(${gsl_inc_dir})
dnl ==================================================	
dnl ==================================================
AC_MSG_CHECKING(for GSL lib directory)
AC_ARG_WITH(gsl_lib_dir,
 [  --with-gsl-lib-dir=dir            GSL lib directory (default=GSL_DIR/lib)],
    gsl_lib_dir="${withval}", gsl_lib_dir="")
    if test "x$gsl_lib_dir" = "x" ; then 
       gsl_lib_dir=${gsl_dir}/lib
    fi
    AC_MSG_RESULT(${gsl_lib_dir})
dnl ==================================================	

   adcl_gsl_inc_flag="-DGSL -I${gsl_inc_dir}"
   adcl_gsl_ld_flag="-L${gsl_lib_dir} -lgsl -lgslcblas"
   adcl_minmax="minmax"
else
   adcl_gsl_inc_flag="-UGSL"
fi

AC_SUBST(adcl_gsl_inc_flag)
AC_SUBST(adcl_gsl_ld_flag)
AC_SUBST(adcl_minmax)


dnl ==================================================
dnl Try to compile a trivial C MPI application
AC_MSG_CHECKING(if we can compile and link a simple MPI program with ${mpi_cc})
cat > testmpi.c <<EOF
#include "mpi.h"

int main (int argc, char **argv)
{
    MPI_Init (&argc, &argv);
    MPI_Finalize();
}
EOF

$mpi_cc -o testmpi testmpi.c > /dev/null 2>&1
if test ! -s testmpi ; then
    AC_MSG_RESULT(no)
    AC_MSG_ERROR([cannot compile and link a simple MPI program with ${mpi_cc}])
else
   AC_MSG_RESULT(yes)
fi
/bin/rm -f testmpi.c testmpi testmpi.o

dnl ==================================================

dnl ==================================================
dnl Test MPI_Type_create_subarray in MPI library
AC_MSG_CHECKING(if MPI library supports sub-array datatype constructor)
cat >  TestCreateSubarray.c <<EOF
#include <mpi.h>
int main(int argc, char **argv)
{
    int	gsizes=1, lsizes=1, start_indices=0;
    MPI_Datatype newtype;

    MPI_Init(&argc, &argv);
    MPI_Type_create_subarray(1, &gsizes, &lsizes, &start_indices,
                             MPI_ORDER_C, MPI_FLOAT, &newtype);    
    MPI_Finalize();
    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestCreateSubarray TestCreateSubarray.c > /dev/null 2>&1
if test ! -s TestCreateSubarray; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   MPI_SUBARRAY=1
   AC_DEFINE(MPI_SUBARRAY)
fi
/bin/rm -f TestCreateSubarray TestCreateSubarray.* TestCreateSubarray.c
dnl ==================================================

AC_ARG_ENABLE(onesided,
[  --enable-onesided                 enable the usage of one-sided communication (default=no)],
[test "$enableval" = yes && ADCL_ONESIDED=yes])
test "$ADCL_ONESIDED" = yes || ADCL_ONESIDED=no

AC_MSG_CHECKING([whether to enable the usage of one-sided communciation])
AC_MSG_RESULT(${ADCL_ONESIDED})

dnl ==================================================

dnl ==================================================
dnl only check for MPI_Win_create and friends if the user enabled the usage of one-sided operations */
if test "$ADCL_ONESIDED" = "yes" ; then 

dnl ==================================================
dnl Test MPI_Win_create in MPI library

AC_MSG_CHECKING(if MPI library supports window objects)
cat >  TestWinCreate.c <<EOF
#include <mpi.h>
int main(int argc, char **argv)
{
    int sum;
    MPI_Win sum_win;
    MPI_Init(&argc, &argv);
    MPI_Win_create(&sum, sizeof(sum), sizeof(sum), 0, MPI_COMM_WORLD, &sum_win);
    MPI_Finalize();
    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestWinCreate TestWinCreate.c > /dev/null 2>&1
if test ! -s TestWinCreate ; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   MPI_WIN=1
   AC_DEFINE(MPI_WIN)
fi
/bin/rm -f TestWinCreate TestWinCreate.o TestWinCreate.c 
dnl ==================================================

dnl ==================================================
if test "$MPI_WIN" = "1" ; then 
dnl ==================================================
dnl Test MPI_Win_fence put in MPI library
AC_MSG_CHECKING(if MPI library supports MPI_Win_fence with MPI_Put)
cat >  TestFencePut.c <<EOF
#include <mpi.h>
int main(int argc, char **argv)
{
    int assert=0;	
    int orgaddr, orgcnt=1,rank=0,targcnt = 0;
    
    MPI_Aint tardisp=0;
    MPI_Datatype targtype;
    MPI_Win win;

    MPI_Init(&argc, &argv);
    MPI_Win_fence(assert, win);
    MPI_Put(&orgaddr, orgcnt, MPI_INT, rank,
    	tardisp, targcnt, targtype,win);
    
    MPI_Win_fence(assert, win);
    MPI_Finalize();

    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestFencePut TestFencePut.c > /dev/null 2>&1
if test ! -s TestFencePut; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   FENCE_PUT=1
   AC_DEFINE(FENCE_PUT)
fi
/bin/rm -f TestFencePut TestFencePut.*
dnl ==================================================
dnl ==================================================
dnl Test MPI_Win_fence get in MPI library
AC_MSG_CHECKING(if MPI library supports MPI_Win_fence with MPI_Get)
cat >  TestFenceGet.c <<EOF

#include <mpi.h>
int main(int argc, char **argv)
{
    int assert=0;
    int orgaddr, orgcnt=1,tarrank=0, targcnt = 0;
    
    MPI_Aint tardisp=0;
    MPI_Datatype targtype;
    MPI_Win win;
    
    MPI_Init(&argc, &argv);
    MPI_Win_fence(assert, win);
    MPI_Get(&orgaddr, orgcnt, MPI_INT, tarrank, tardisp, targcnt, targtype,win);
    
    MPI_Win_fence(assert, win);
    MPI_Finalize();
    
    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestFenceGet TestFenceGet.c > /dev/null 2>&1
if test ! -s TestFenceGet; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   FENCE_GET=1
   AC_DEFINE(FENCE_GET)
fi
/bin/rm -f TestFenceGet TestFenceGet.*
dnl ==================================================



dnl ==================================================
dnl Test MPI_Win_Post_start put in MPI library
AC_MSG_CHECKING(if MPI library supports MPI_Win_post/start with MPI_Put)
cat >  TestPostPut.c <<EOF

#include <mpi.h>
int main(int argc, char **argv)
{
    int orgaddr, orgcnt=1,rank=0,targcnt = 0,assert=0;
    
    MPI_Group group;
    MPI_Win win;
    MPI_Aint tardisp=0;
    MPI_Datatype targtype;
    
    MPI_Init(&argc, &argv);
    MPI_Win_post(group, assert, win);
    MPI_Win_start(group, assert, win);
    
    MPI_Put(&orgaddr, orgcnt, MPI_INT, rank,tardisp, targcnt, targtype,win);
    
    
    MPI_Win_complete(win);
    MPI_Win_wait(win);
    MPI_Finalize();
    
    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestPostPut TestPostPut.c > /dev/null 2>&1
if test ! -s TestPostPut; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   POSTSTART_PUT=1
   AC_DEFINE(POSTSTART_PUT)
fi
/bin/rm -f TestPostPut TestPostPut.*
dnl ==================================================

dnl ==================================================
dnl Test MPI_Win_Post_start get in MPI library
AC_MSG_CHECKING(if MPI library supports MPI_Win_post/start with MPI_Get)
cat >  TestPostGet.c <<EOF
#include <mpi.h>
int main(int argc, char **argv)
{
    int orgaddr, orgcnt=1,tarrank=0,targcnt = 0,assert=0;
    
    MPI_Group group;
    MPI_Win win;
    MPI_Aint tardisp=0;
    MPI_Datatype targtype;
    
    MPI_Init(&argc, &argv);
    MPI_Win_post(group, assert, win);
    MPI_Win_start(group, assert, win);
    
    MPI_Get(&orgaddr, orgcnt, MPI_INT, tarrank,tardisp, targcnt, targtype,win);
    
    
    MPI_Win_complete(win);
    MPI_Win_wait(win);
    MPI_Finalize();
    
    return MPI_SUCCESS;
}
EOF

$mpi_cc -o TestPostGet TestPostGet.c > /dev/null 2>&1
if test ! -s TestPostGet; then
    AC_MSG_RESULT(no)
else
   AC_MSG_RESULT(yes)
   POSTSTART_GET=1
   AC_DEFINE(POSTSTART_GET)
fi
/bin/rm -f TestPostGet TestPostGet.*
dnl ==================================================
fi
dnl MPI_WIN ==================================================
fi 
dnl ADCL_ONESIDED ==================================================

AC_ARG_ENABLE(use_barrier,
[  --enable-use-barrier              use barrier synchronization for measurements (default=yes)],
[test "$enableval" = no && ADCL_USE_BARRIER=no])
test "$ADCL_USE_BARRIER" = no || ADCL_USE_BARRIER=yes

AC_MSG_CHECKING([whether to use barrier synchronization for measurements])
AC_MSG_RESULT(${ADCL_USE_BARRIER})
if test "$ADCL_USE_BARRIER" = yes ; then
  AC_DEFINE(ADCL_USE_BARRIER)
fi

AC_ARG_ENABLE(printf_tofile,
[  --disable-printf-tofile           dump printf statements to a file (default=yes)],
[test "$enableval" = no && ADCL_FILE_PER_PROC=no])
test "$ADCL_FILE_PER_PROC" = no || ADCL_FILE_PER_PROC=yes

AC_MSG_CHECKING([whether to dump printf statements to a file instead of stdout])
AC_MSG_RESULT(${ADCL_FILE_PER_PROC})
if test "$ADCL_FILE_PER_PROC" = yes ; then
  AC_DEFINE(ADCL_FILE_PER_PROC)
fi

AC_ARG_ENABLE(new-output-format,
[  --enable-new-output-format        save emethod id as winner instead of request id (default=no)],
[test "$enableval" = yes && ADCL_NEW_OUTPUT_FORMAT=yes])
test "$ADCL_NEW_OUTPUT_FORMAT" = yes || ADCL_NEW_OUTPUT_FORMAT=no

AC_MSG_CHECKING([whether to use new output format])
AC_MSG_RESULT(${ADCL_NEW_OUTPUT_FORMAT})
if test "$ADCL_NEW_OUTPUT_FORMAT" = yes ; then
  AC_DEFINE(ADCL_NEW_OUTPUT_FORMAT)
fi

AC_ARG_ENABLE(userlevel_timings,
[  --enable-userlevel-timings        disable ADCL internal timing routines (default=no)],
[test "$enableval" = yes && ADCL_USERLEVEL_TIMINGS=yes])
test "$ADCL_USERLEVEL_TIMINGS" = yes || ADCL_USERLEVEL_TIMINGS=no

AC_MSG_CHECKING([whether to disable ADCL internal timing routines])
AC_MSG_RESULT(${ADCL_USERLEVEL_TIMINGS})
if test "$ADCL_USERLEVEL_TIMINGS" = yes ; then
  AC_DEFINE(ADCL_USERLEVEL_TIMINGS)
fi

AC_ARG_ENABLE(knowledge-tofile,
[  --enable-knowledge-tofile         dump the ADCL knowledge to an XML file (default=no)],
[test "$enableval" = yes && ADCL_KNOWLEDGE_TOFILE=yes])
test "$ADCL_KNOWLEDGE_TOFILE" = yes || ADCL_KNOWLEDGE_TOFILE=no

AC_MSG_CHECKING([whether to dump the ADCL knowledge to an XML file])
AC_MSG_RESULT(${ADCL_KNOWLEDGE_TOFILE})
if test "$ADCL_KNOWLEDGE_TOFILE" = yes ; then
  AC_DEFINE(ADCL_KNOWLEDGE_TOFILE)
fi

AC_ARG_ENABLE(saving_request-winner,
[  --disable-saving-request-winner   save the winner of a request (default=yes)],
[test "$enableval" = no && ADCL_SAVE_REQUEST_WINNER=no])
test "$ADCL_SAVE_REQUEST_WINNER" = no || ADCL_SAVE_REQUEST_WINNER=yes

AC_MSG_CHECKING([whether to save the winner of a request])
AC_MSG_RESULT(${ADCL_SAVE_REQUEST_WINNER})
if test "$ADCL_SAVE_REQUEST_WINNER" = yes ; then
  AC_DEFINE(ADCL_SAVE_REQUEST_WINNER)
fi

AC_ARG_ENABLE(smooth-hist,
[  --enable-smooth-hist              smooth the history data (default=no)],
[test "$enableval" = yes && ADCL_SMOOTH_HIST=yes])
test "$ADCL_SMOOTH_HIST" = yes || ADCL_SMOOTH_HIST=no

AC_MSG_CHECKING([whether to apply a smoothing operation to the history data])
AC_MSG_RESULT(${ADCL_SMOOTH_HIST})
if test "$ADCL_SMOOTH_HIST" = yes ; then
  AC_DEFINE(ADCL_SMOOTH_HIST)
fi


dnl ==================================================
AC_MSG_CHECKING(for number of measurements per method)
AC_ARG_WITH(num_tests,
 [  --with-num-tests=NUMTESTS         Number of measurements per implementation (default=30)],
    adcl_emethod_numtests="${withval}", adcl_emethod_numtests="30")
    AC_MSG_RESULT(${adcl_emethod_numtests})
    AC_SUBST(adcl_emethod_numtests)
dnl ==================================================
AC_MSG_CHECKING(for acceptable performance window)
AC_ARG_WITH(perf_win,
 [  --with-perf-win=PERF-WIN          Acceptable performance window (default=10)],
    perf_win="${withval}", perf_win="10")
    if test "x$perf_win" = "x" ; then
      perf_win==10
    fi
    AC_MSG_RESULT(${perf_win})
    AC_DEFINE_UNQUOTED([ADCL_PERF_WIN],$perf_win,[])
dnl ==================================================
AC_MSG_CHECKING(for prediction algorithm options)
AC_ARG_WITH(pred-algo,
 [  --with-pred-algo=algorithm        Prediction algorithm options (default=ADCL_WMV)],
    algorithm="${withval}", algorithm="")
    if test "x$algorithm" = "x" ; then
      algorithm=ADCL_WMV
    fi
    if test "$algorithm" == "ADCL_WMV"; then 
      AC_MSG_RESULT(${algorithm})
    else if test "$algorithm" == "ADCL_CLOSEST"; then 
      AC_MSG_RESULT(${algorithm})
    else if test "$algorithm" == "ADCL_SVM"; then 
      AC_MSG_RESULT(${algorithm})
    else
      AC_MSG_ERROR([not recognized prediction algorithm])
    fi
    fi
    fi
    AC_DEFINE_UNQUOTED([ADCL_PRED_ALGO],$algorithm,[])
dnl ==================================================
AC_MSG_CHECKING(for size of smoothing window)
AC_ARG_WITH(smooth_win,
 [  --with-smooth-win=WIN-SIZE        Size of the smoothing window (default=3)],
    smooth_win="${withval}", smooth_win="3")
    if test "x$smooth_win" = "x" ; then
      smooth_win==3
    fi
    AC_MSG_RESULT(${smooth_win})
    AC_DEFINE_UNQUOTED([ADCL_SMOOTH_WIN],$smooth_win,[])
dnl ==================================================

dnl ==================================================
AC_ARG_ENABLE(dummy-mpi,
[  --enable-dummy-mpi                enable the usage of dummy-mpi (default=no)],
[test "$enableval" = yes && ADCL_DUMMY_MPI=yes && c_compiler="cc" && f_compiler="gfortran" && 
dumpi_inc="${adcl_inc_dir}/ADCL_dummy_mpi.h" &&
dumpi_make="cd src/dummympi ; make all" && 
dumpi_clean="cd src/dummympi ; make clean"])
test "$ADCL_DUMMY_MPI" = yes || ADCL_DUMMY_MPI=no

AC_MSG_CHECKING([whether to enable the usage of dummy-mpi])
AC_MSG_RESULT(${ADCL_DUMMY_MPI})

if test "$ADCL_DUMMY_MPI" = "yes" ; then 
   AC_DEFINE(ADCL_DUMMY_MPI)
fi

dnl ==================================================
AC_ARG_ENABLE(fortran,
[  --disable-fortran                 compile fortran wrappers (default=yes)],
[test "$enableval" = no && ADCL_FORTRAN=no])
test "$ADCL_FORTRAN" = no || ADCL_FORTRAN=yes
test "$ADCL_FORTRAN" = yes && fortran_make="cd src/adcl/f90 ; make all"
test "$ADCL_FORTRAN" = yes && fortran_clean="cd src/adcl/f90 ; make clean"
AC_MSG_CHECKING([whether to compile fortran wrappers])
AC_MSG_RESULT(${ADCL_FORTRAN})
if test "$ADCL_FORTRAN" = "yes" ; then 
   AC_DEFINE(ADCL_FORTRAN)
fi

AC_SUBST(c_compiler)
AC_SUBST(f_compiler)
AC_SUBST(dumpi_inc)
AC_SUBST(dumpi_make)
AC_SUBST(dumpi_clean)
AC_SUBST(fortran_make)
AC_SUBST(fortran_clean)

dnl ==================================================

dnl Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS(limits.h malloc.h sys/time.h unistd.h sys/types.h)
#AC_CHECK_FUNCS(strdup strerror strstr strtol strlcat strlcpy)

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_TYPE_PID_T
#AC_TYPE_SIZE_T

dnl Checks for library functions.
#AC_FUNC_MEMCMP
#AC_CHECK_FUNCS(gethostname strerror strstr setlinebuf strcasecmp snprintf)

AC_OUTPUT(Makefile Makefile.defs include/ADCL_sysconfig.h src/framework/Makefile src/adcl/C/Makefile src/dummympi/Makefile utils/Makefile)
